
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fprintf (int ,char*,...) ;
 int stdout ;

void usage(char *pname)
{
 fprintf(stdout, "\nUsage: %s < d | s | r | p >\n\n", pname);
 fprintf(stdout, "  d - exploit /sbin/dump\n");
 fprintf(stdout, "  s - exploit /sbin/dump.static\n");
 fprintf(stdout, "  r - exploit /sbin/restore\n");
 fprintf(stdout, "  p - exploit /sbin/restore.static\n\n");
}
